--- a/index.html
+++ b/index.html
@@ -1,81 +1,69 @@
 <html>
-    <header>
+    <head>
         <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/all.min.css">
-        <link rel="stylesheet" href="style.css">
-    </header>
+        <link rel="stylesheet" href="css/style.css">
+        <script src="https://kit.fontawesome.com/2038fb1d31.js" crossorigin="anonymous"></script>
+    </head>
     <body>
+      
+        <nav class="navbar navbar-expand-lg navbar-dark">
 
-        <!--about-->
-       <section class=" bg-light p-5"  id="about">
-        <div class="container bg-white">
-           <div class=" row  shadow-sm p-3 mb-5 bg-body rounded ">
-               <div class="col-lg-6 col-md-12 col-sm-12">
-                    <div class="row pb-5 pt-5">
-                        <div class="col-lg-5 row-cols-md-4 col-sm-12 text-center ">
-                            <img src="img/testimonial-2.jpg" class=" w-75 rounded ms-3">
-                        </div>
-                        <div class="col-lg-7 col-md-8 col-sm-12 text-start">
-                            <ul>
-                                <li class=" ms-0 pt-2 pb-2"><span class="fw-bold">Name:</span> Morgan Freeman</li>
-                                <li class=" pt-2 pb-2"><span class="fw-bold">Profile:</span> full stack developer</li>
-                                <li class=" pt-2 pb-2"><span class="fw-bold">Email:</span> contact@example.com</li>
-                                <li class=" pt-2 pb-2"><span class="fw-bold">Phone:</span> (617) 557-0089</li>
-                            </ul>
-                        </div>
-                        <div class=" col-sm-12 text-uppercase">
-                            <h4 class="text-capitalize">Skills</h4>
-                            <span>Html</span>
-                            <span>85%</span>
-                            <div class=" bg-skill w-100 mb-4">
-                                <div class=" bg-primary w-85 my-p"></div>
-                            </div>
-                            <span>CSS3</span>
-                            <span>75%</span>
-                            <div class=" bg-skill w-100 mb-4">
-                                <div class=" bg-primary w-75 my-p"></div>
-                            </div>
-                            <span>PHP</span>
-                            <span>50%</span>
-                            <div class=" bg-skill w-100 mb-4">
-                                <div class=" bg-primary w-50 my-p"></div>
-                            </div>
-                            <span>JavaScript</span>
-                            <span>90%</span>
-                            <div class=" bg-skill w-100 mb-4">
-                                <div class=" bg-primary w-90 my-p"></div>
-                            </div>
+            <div class="container">
+              <a class="navbar-brand" href="#">DevFolio</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                  <li class="nav-item">
+                    <a class="nav-link active hover position-relative" aria-current="page" href="#">HOME</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active hover position-relative" aria-current="page" href="#about">ABOUT</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active hover position-relative" aria-current="page" href="#service">SERVICES</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active hover position-relative" aria-current="page" href="#">WORK</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active hover position-relative" aria-current="page" href="#">BLOG</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link text-dark hover position-relative drop" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      DROP DOWN
+                    </a>
+                    <ul class="dropdown-menu overflow-hidden" aria-labelledby="navbarDropdownMenuLink">
+                      <li><a class="dropdown-item color" href="#">Action</a></li>
+                      <li><a class="dropdown-item color" href="#">Another action</a></li>
+                      <li><a class="dropdown-item color" href="#">Something else here</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active hover position-relative" aria-current="page" href="#">CONTACT</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
 
-                        </div>
-                    </div>
-               </div>
-               <div class=" col-lg-6 col-md-12 col-sm-12 pb-5 pt-5 ">
-                <div class="position-relative">
-                 <h3 class="title-left">About me</h3>
+          <div class="welcome">
+            <div class="item"></div>
+              <h2 class="">I am Morgan Freeman</h2>
+              <div class="contain">
+                <div class="list">
+                <ul class="list-item">
+                    <li><span>Designer</span></li>
+                    <!-- <li><span>Photographer</span></li>
+                    <li><span>Developer</span></li>
+                    <li><span>Freelancer</span></li> -->
+                  </ul>
                 </div>
-                 <p class=" mb-3 p-1"> Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla porttitor accumsan tincidunt.</p>
-
-                 <p class=" mb-3 p-1"> Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vivamus suscipit tortor eget felis porttitor volutpat. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. porttitor at sem.</p>
-
-                 <p class=" mb-3 p-1"> Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elementum id enim. Nulla porttitor accumsan tincidunt. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.</p>
-
-               </div>
-
-           </div>
-        </div>
-
-       </section>
-
-
+            </div>
+          </div>
+          <!-- navbar and welcome section end  -->
 
         <script src="js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
-
-
-
-
-
-
-
-
