Blog & Contact sections
Blog & Contact section Add by Ahmed Anwar

--- a/index.html
+++ b/index.html
@@ -123,6 +123,155 @@
   
          </section>
 
+          <!-- Blog & Contact Sections by "Ahmed Anwar" -->
+    <section id="blog">
+      <div class="container">
+          <div class="head">
+              <h3>Blog</h3>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+
+              <div class="border"></div>
+          </div>
+
+          <div class="body">
+              <div class="card">
+                  <div class="card-header">
+                      <div class="image">
+                          <a href="#">
+                              <img src="img/post-1.jpeg" alt="">
+                          </a>
+                      </div>
+                  </div>
+                  <div class="card-body">
+                      <div class="title">
+                          <h6>travel</h6>
+                      </div>
+                      <div class="descitption">
+                          <h3><a href="#">See more ideas about Travel</a></h3>
+                          <p>Proin eget tortor risus. Pellentesque in ipsum id orci porta dapibus. Praesent sapien
+                              massa, convallis a pellentesque nec, egestas non nisi.</p>
+                      </div>
+                  </div>
+                  <div class="card-footer">
+                      <a href="">
+                          <div class="author">
+                              <img src="img/testimonial-2.jpeg" alt="">
+                              <span>Morgan Freeman</span>
+                          </div>
+                      </a>
+                      <div class="time">
+                          <span><i class="fa-solid fa-clock"></i> 10 min</span>
+                      </div>
+                  </div>
+              </div>
+              <div class="card">
+                  <div class="card-header">
+                      <div class="image">
+                          <a href="#">
+                              <img src="img/post-2.jpeg" alt="">
+                          </a>
+                      </div>
+                  </div>
+                  <div class="card-body">
+                      <div class="title">
+                          <h6>web design</h6>
+                      </div>
+                      <div class="descitption">
+                          <h3><a href="#">See more ideas about Travel</a></h3>
+                          <p>Proin eget tortor risus. Pellentesque in ipsum id orci porta dapibus. Praesent sapien
+                              massa, convallis a pellentesque nec, egestas non nisi.</p>
+                      </div>
+                  </div>
+                  <div class="card-footer">
+                      <a href="">
+                          <div class="author">
+                              <img src="img/testimonial-2.jpeg" alt="">
+                              <span>Morgan Freeman</span>
+                          </div>
+                      </a>
+                      <div class="time">
+                          <span><i class="fa-solid fa-clock"></i> 10 min</span>
+                      </div>
+                  </div>
+              </div>
+              <div class="card">
+                  <div class="card-header">
+                      <div class="image">
+                          <a href="#">
+                              <img src="img/post-3.jpeg" alt="">
+                          </a>
+                      </div>
+                  </div>
+                  <div class="card-body">
+                      <div class="title">
+                          <h6>web design</h6>
+                      </div>
+                      <div class="descitption">
+                          <h3><a href="#">See more ideas about Travel</a></h3>
+                          <p>Proin eget tortor risus. Pellentesque in ipsum id orci porta dapibus. Praesent sapien
+                              massa, convallis a pellentesque nec, egestas non nisi.</p>
+                      </div>
+                  </div>
+                  <div class="card-footer">
+                      <a href="">
+                          <div class="author">
+                              <img src="img/testimonial-2.jpeg" alt="">
+                              <span>Morgan Freeman</span>
+                          </div>
+                      </a>
+                      <div class="time">
+                          <span><i class="fa-solid fa-clock"></i> 10 min</span>
+                      </div>
+                  </div>
+              </div>
+
+          </div>
+      </div>
+  </section>
+  <section id="contact">
+      <div class="container">
+          <div class="title">
+              <h4>send message us</h4>
+              <div class="border"></div>
+              <div class="form">
+                  <form action="">
+                      <input type="text" placeholder="Your Name" name="usrnm">
+                      <input type="email" placeholder="Your Email" name="usrmail">
+                      <input type="text" placeholder="Subject" name="msgsub">
+                      <textarea name="message" id="" cols="30" rows="7" placeholder="Message"></textarea>
+                      <button>send message</button>
+                  </form>
+              </div>
+          </div>
+         
+          <div class="touch">
+              <h4>get in touch</h4>
+              <div class="border"></div>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dolorum dolorem soluta quidem
+                  expedita aperiam aliquid at. Totam magni ipsum suscipit amet? Autem nemo esse laboriosam ratione
+                  nobis mollitia inventore?</p>
+              <div class="adress">
+                  <p><i class="fa-solid fa-location-dot"></i>329 WASHINGTON ST BOSTON, MA 02108 </p>
+                  <p><i class="fa-solid fa-mobile-button"></i> (617) 557-0089 </p>
+                  <p><i class="fa-solid fa-envelope"></i>contact@example.com</p>
+              </div>
+              <div class="social">
+                 <a href=""><i class="fa-brands fa-facebook"></i></a> 
+                 <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                 <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+              </div>
+          </div>
+      </div>
+  </section>
+  <footer> 
+      <div class="container">
+          <div>
+              <p>© Copyright <span>DevFolio</span>. All Rights Reserved</p>
+              <p>Designed by <a href="#">BootstrapMade</a></p>
+          </div>
+      </div>
+  </footer>
 
 
 
